using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

internal class AnimationStrings
{
    
    // Add your animation string constants here
    internal static string IsMoving = "IsMoving";
    internal static string IsGrounded = "IsGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string JumpTrigger = "Jump";
    internal static string IsOnWall = "IsOnWall";
    internal static string IsOnCeiling = "IsOnCeiling";
    internal static string AttackTrigger = "Attack";
    internal static string Attack2Trigger = "Attack2";
    internal static string IsAttacking = "IsAttacking";
    internal static string QueueAttack = "QueueAttack";
    internal static string CanMove = "CanMove";
    internal static string HasTarget = "HasTarget";
    internal static string IsAlive = "IsAlive";
    internal static string IsHit = "IsHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "LockVelocity";
    internal static string AttackCooldown = "AttackCooldown";
    internal static string DodgeTrigger = "Roll";
    internal static string IsDodging = "IsDodging";
    internal static string IsChasing = "IsChasing";
}