namespace Animation
{
    internal abstract class AnimationStrings
    {
        // Add your animation string constants here
        static readonly public string IsMoving = "IsMoving";
        static readonly public string IsGrounded = "IsGrounded";
        static readonly public string YVelocity = "yVelocity";
        static readonly public string JumpTrigger = "Jump";
        static readonly public string IsOnWall = "IsOnWall";
        static readonly public string AttackTrigger = "Attack";
        static readonly public string Attack2Trigger = "Attack2";
        static readonly public string IsAttacking = "IsAttacking";
        static readonly public string CanMove = "CanMove";
        static readonly public string HasTarget = "HasTarget";
        static readonly public string IsAlive = "IsAlive";
        static readonly public string HitTrigger = "Hit";
        static readonly public string LockVelocity = "LockVelocity";
        static readonly public string AttackCooldown = "AttackCooldown";
        static readonly public string DodgeTrigger = "Roll";
        static readonly public string DashTrigger = "Dash";
        static readonly public string CanDash = "CanDash";
        static readonly public string IsDodging = "IsDodging";
        static readonly public string IsDashing = "IsDashing";
    }
}